Fix async system task poll claiming